Initial update to Java 16